Fixed overflow images

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ section.hero {
 .hero .bg-wrapper {
   position: absolute;
   width: 33%;
-  margin-left: 67%;
+  right: 0;
   background: url('./images/hero-bg-xl.png');
   height: 100%;
   z-index: -1;
@@ -642,6 +642,9 @@ footer .branding {
   }
   .hero h3 {
     font-size: 2.8rem;
+  }
+  .buttons-container svg {
+    width: 133px !important;
   }
 
   /* Partners Section */
